# hsScheme

./: AST.hs  ApplyMacros.hs  Ast.hs  ICR.hs  InternalDefinitions.hs  LICENCE.md  Main.hs  Parser.hs  README.md  TODO.md  TransformTopDefinitions.hs  ast.hs  compiler_steps.txt  hsScheme.cabal
AnnotatedAST/: AddAnnotations.hs  Types.hs
ICR/: ASTToICR.hs  ICR.hs  Types.hs
Parrot/: Parrot.hs  ParrotGenerator.hs
Parser/: AST.hs  AndOrToIf.hs  ApplyMacros.hs  ApplyMacros.hs~  IfToCond.hs  InternalDefinitions.hs  InternalDefinitions.hs~  LetStarToLet.hs  LetToLambda.hs  Parser.hs  Parser.hs~  Semantics.hs  TransformTopDefinitions.hs  TransformTopDefinitions.hs~  Transformations.hs
Test/: AndOrToIf.hs  InternalDefinitions.hs  Macros.hs  Main.hs  Main.hs~  Parser.hs  Parser.hs~  TestMain.hs
Test/ICR/: Main.hs  Types.hs  Types.hs~
Test/Parser/: InternalDefinitions.hs  Macros.hs  Main.hs  Parser.hs  TestMain.hs
Utils/: FileManagement.hs  GraphRepres.hs
devel/: TailCalls.txt  example_1.c  example_1.scm
